plang/testing/logs/false-incorrect/181/program181.p.p
l7n (q j mz (u (jp YDLw) QVr (iBX9J N iLSFc iHDK2 WIaW) v)) (NtT6L) :- (r (d5t) ToU; (frB22), yiV n (ldaNW qgs aVu42) yOKZs), olu3 Gs44O WM (CD), f; (kRm (sRR h krJ) (LziB) QyG z6K, m3Kfw (E34) (zjh (rVC jyt3D) E2V (M) (TD0EN))).

buLxl :- yP Kt1y; (tP (veJ8 yI) (M) (jedBe q YGOn HH), sReio (xia (U) fEMt NG (gT (Z70Y) QP3 U)), aW; aZ (pKx (I) (t9g T) (iUj)) (P36xr) rNc); dq v4ld (KHOHl) (g).

hR.
tUi tqjt Xrof.

tNVgm X QK :- o rBC (h ZL (Ub1) JN) G x, (a (wEsQ p (X7ZaV)) WfO (OC) (rwm c)).
e9Fus (cF9DM) (K5Ul) :- (hATn1 (GiFG) u, (zO mS8z (JVuo)), i5 m FpXDY; vE9; p7F3U OjJP), ke (K) O9 (I1Q).


ldI7 a86dr.
z (tPP f6WET (a (JaPoX) aeK) Arr0) wj :- tLwp nGTPr xIPmu.
i.
? (u (GEZ)); ((hZgsL (cbYzf); tJK2c nv (gr (b (UT) Xy A) (M8W) hQr1 m) jdmo); ((wd OB (BB0A) (Y7zs) (kA Ksa W8ET Kn)))).



